# sdr-visualizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: examples.yml  lint.yml  pages.yml  release.yml  test.yml  version-sync.yml
docs/: ADAPTER_GUIDE.md  ARCHITECTURE.md  EMBEDDED_DATA_FORMAT.md  PERFORMANCE.md  payload-schema.json
examples/: aa-typical.html  cja-typical.html
scripts/: capture_screenshot.py  corpus_check.py  generate_aa_large_fixture.py  generate_examples.py  generate_large_fixture.py  mutate_fixture.py  perf_browser_check.py  perf_check.py
src/sdr_visualizer/: __init__.py  __main__.py
src/sdr_visualizer/adapters/: aa.py  base.py  cja.py
src/sdr_visualizer/analysis/: diff.py  formula_tree.py  references.py  segment_tree.py  trend.py
src/sdr_visualizer/cli/: exit_codes.py  main.py
src/sdr_visualizer/core/: exceptions.py  models.py  visualizer.py
src/sdr_visualizer/input/: detect.py  loader.py  series.py  shell_out.py
src/sdr_visualizer/render/: data_payload.py  renderer.py  trend_charts.py
src/sdr_visualizer/render/static/: visualizer.css  visualizer.js
src/sdr_visualizer/render/templates/: catalog.html.j2  changes.html.j2  graph.html.j2  index.html.j2  trend.html.j2
tests/: conftest.py  test_adapter_fuzz.py  test_adapters_aa.py  test_adapters_cja.py  test_analysis_diff.py  test_analysis_formula_tree.py  test_analysis_references.py  test_analysis_segment_tree.py  test_analysis_trend.py  test_browser_functional.py  test_cli.py  test_cli_flags.py  test_corpus_check.py  test_data_payload.py  test_entrypoint.py  test_input_modes.py  test_input_series.py  test_minimal_fixture.py  test_mutate_fixture.py  test_payload_schema.py  test_perf.py  test_renderer.py  test_renderer_anatomy.py  test_renderer_graph.py  test_trend_charts.py
tests/fixtures/: aa_snapshot_clean.json  aa_snapshot_messy.json  cja_snapshot_clean.json  cja_snapshot_hostile.json  cja_snapshot_messy.json  cja_snapshot_minimal.json
