[project]
name = "sdr-visualizer"
version = "0.1.0"
description = "Static-output visual catalog generator for Adobe Customer Journey Analytics and Adobe Analytics implementations."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Brian Au" }]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.6",
]

[project.scripts]
sdr-visualizer = "sdr_visualizer.cli.main:main"

[project.urls]
Homepage = "https://github.com/brian-a-au/sdr-visualizer"
Issues = "https://github.com/brian-a-au/sdr-visualizer/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
browser = [
    "playwright>=1.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdr_visualizer"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
