[project]
name = "sdr-visualizer"
version = "1.0.3"
description = "Static-output visual catalog generator for Adobe Customer Journey Analytics and Adobe Analytics implementations."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES"]
authors = [{ name = "Brian Au" }]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.6",
]

[project.scripts]
sdr-visualizer = "sdr_visualizer.cli.main:main"

[project.urls]
Homepage = "https://github.com/brian-a-au/sdr-visualizer"
Issues = "https://github.com/brian-a-au/sdr-visualizer/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "hypothesis>=6.100",
    "jsonschema>=4.21",
    "pytest-cov>=5.0",
]
browser = [
    "playwright>=1.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdr_visualizer"]

# The sdist is an explicit allowlist: the build runs from a working
# directory that also holds untracked reference material, and hatchling's
# default is to include every non-gitignored file. README, LICENSE,
# THIRD_PARTY_LICENSES, pyproject.toml, and .gitignore are added by
# hatchling automatically.
[tool.hatch.build.targets.sdist]
include = [
    "src/sdr_visualizer",
    "tests",
    "scripts",
    "docs/*.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["sdr_visualizer"]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 99.00

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
